added get username route
